--- a/boards/nordic/nrf54l15pdk/nrf54l15pdk_nrf54l15_cpuapp.dts
+++ b/boards/nordic/nrf54l15pdk/nrf54l15pdk_nrf54l15_cpuapp.dts
@@ -5,22 +5,35 @@
  */
 
 /dts-v1/;
-#include <nordic/nrf54l15_cpuapp.dtsi>
-#include "nrf54l15pdk_nrf54l15_cpuapp-pinctrl.dtsi"
 #include <zephyr/dt-bindings/input/input-event-codes.h>
+#include <nordic/nrf54l15_cpuapp.dtsi>
+#include "nrf54l15pdk_nrf54l15-pinctrl.dtsi"
 
 / {
-	model = "Nordic nRF54L15 PDK nRF54L15 Application MCU";
 	compatible = "nordic,nrf54l15pdk_nrf54l15-cpuapp";
+	model = "Nordic nRF54L15 PDK nRF54L15 Application MCU";
 
 	chosen {
 		zephyr,console = &uart20;
 		zephyr,shell-uart = &uart20;
 		zephyr,uart-mcumgr = &uart20;
-		zephyr,sram = &sram0;
-		zephyr,flash = &rram0;
+		zephyr,flash-controller = &rram_controller;
+		zephyr,flash = &cpuapp_rram;
 		zephyr,code-partition = &slot0_partition;
+		zephyr,sram = &cpuapp_sram;
 		zephyr,ieee802154 = &ieee802154;
+	};
+
+	aliases {
+		led0 = &led0;
+		led1 = &led1;
+		led2 = &led2;
+		led3 = &led3;
+		watchdog0 = &wdt30;
+		sw0 = &button0;
+		sw1 = &button1;
+		sw2 = &button2;
+		sw3 = &button3;
 	};
 
 	leds {
@@ -66,18 +79,14 @@
 			zephyr,code = <INPUT_KEY_3>;
 		};
 	};
+};
 
-	aliases {
-		led0 = &led0;
-		led1 = &led1;
-		led2 = &led2;
-		led3 = &led3;
-		watchdog0 = &wdt30;
-		sw0 = &button0;
-		sw1 = &button1;
-		sw2 = &button2;
-		sw3 = &button3;
-	};
+&cpuapp_sram {
+	status = "okay";
+};
+
+&cpuflpr_vpr {
+ 	execution-memory = <&cpuflpr_code_partition>;
 };
 
 &lfxo {
@@ -106,6 +115,8 @@
 };
 
 &grtc {
+	owned-channels = <0 1 2 3 4 5 6 7 8 9 10 11>;
+	child-owned-channels = <3 4 7 8 9 10 11>; /* Channels 7-11 reserved for MPSL, 3-4 for FLPR */
 	status = "okay";
 };
 
@@ -137,7 +148,7 @@
 	status = "okay";
 };
 
-&rram0 {
+&cpuapp_rram {
 	partitions {
 		compatible = "fixed-partitions";
 		#address-cells = <1>;
@@ -148,24 +159,34 @@
 		};
 		slot0_partition: partition@10000 {
 			label = "image-0";
-			reg = <0x10000 DT_SIZE_K(348)>;
+			reg = <0x10000 DT_SIZE_K(328)>;
 		};
-		slot0_ns_partition: partition@67000 {
+		slot0_ns_partition: partition@62000 {
 			label = "image-0-nonsecure";
-			reg = <0x67000 DT_SIZE_K(348)>;
+			reg = <0x62000 DT_SIZE_K(328)>;
 		};
-		slot1_partition: partition@be000 {
+		slot1_partition: partition@b4000 {
 			label = "image-1";
-			reg = <0xbe000 DT_SIZE_K(348)>;
+			reg = <0xb4000 DT_SIZE_K(328)>;
 		};
-		slot1_ns_partition: partition@115000 {
+		slot1_ns_partition: partition@106000 {
 			label = "image-1-nonsecure";
-			reg = <0x115000 DT_SIZE_K(348)>;
+			reg = <0x106000 DT_SIZE_K(328)>;
 		};
-		/* 32k from 0x16c000 to 0x173fff reserved for TF-M partitions */
-		storage_partition: partition@174000 {
+		/* 32k from 0x158000 to 0x15ffff reserved for TF-M partitions */
+		storage_partition: partition@160000 {
 			label = "storage";
-			reg = <0x174000 DT_SIZE_K(36)>;
+			reg = <0x160000 DT_SIZE_K(36)>;
+		};
+		/* 80k from 0x169000 to 0x17cfff reserved for FLPR core code partition */
+	};
+
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		cpuflpr_code_partition: image@169000 {
+			/* FLPR core code partition */
+			reg = <0x169000 DT_SIZE_K(80)>;
 		};
 	};
 };
