--- a/share/sysbuild/images/bootloader/CMakeLists.txt
+++ b/share/sysbuild/images/bootloader/CMakeLists.txt
@@ -24,6 +24,8 @@ if(SB_CONFIG_BOOTLOADER_MCUBOOT)
 elseif(SB_CONFIG_BOOTLOADER_VPR_LAUNCHER)
   if((${BOARD} STREQUAL "nrf54h20dk") AND (${BOARD_QUALIFIERS} STREQUAL "/nrf54h20/cpuppr"))
     set(core nrf54h20dk/nrf54h20/cpuapp)
+  elseif((${BOARD} STREQUAL "nrf54l15pdk") AND (${BOARD_QUALIFIERS} STREQUAL "/nrf54l15/cpuflpr"))
+    set(core nrf54l15pdk/nrf54l15/cpuapp)
   else()
     message(FATAL_ERROR "Unsupported target for VPR launcher")
   endif()
@@ -36,9 +38,17 @@ elseif(SB_CONFIG_BOOTLOADER_VPR_LAUNCHER)
     BOARD ${core}
   )
 
-  if(SB_CONFIG_BOOT_XIP)
-    sysbuild_cache_set(VAR ${image}_SNIPPET APPEND REMOVE_DUPLICATES nordic-ppr-xip)
-  else()
-    sysbuild_cache_set(VAR ${image}_SNIPPET APPEND REMOVE_DUPLICATES nordic-ppr)
+  if((${BOARD} STREQUAL "nrf54h20dk") AND (${BOARD_QUALIFIERS} STREQUAL "/nrf54h20/cpuppr"))
+    if(SB_CONFIG_BOOT_XIP)
+      sysbuild_cache_set(VAR ${image}_SNIPPET APPEND REMOVE_DUPLICATES nordic-ppr-xip)
+    else()
+      sysbuild_cache_set(VAR ${image}_SNIPPET APPEND REMOVE_DUPLICATES nordic-ppr)
+    endif()
+  elseif((${BOARD} STREQUAL "nrf54l15pdk") AND (${BOARD_QUALIFIERS} STREQUAL "/nrf54l15/cpuflpr"))
+    if(SB_CONFIG_BOOT_XIP)
+      sysbuild_cache_set(VAR ${image}_SNIPPET APPEND REMOVE_DUPLICATES nordic-flpr-xip)
+    else()
+      message(FATAL_ERROR "Unsupported configuration - currently nRF54L15 FLPR supports only XIP")
+    endif()
   endif()
 endif()
