dts: riscv: nordic: enable CLIC nodes
Interrupt controller driver requires those nodes to be enabled.

Signed-off-by: Marcin Szymczyk <marcin.szymczyk@nordicsemi.no>

--- a/dts/riscv/nordic/nrf54h20_cpuppr.dtsi
+++ b/dts/riscv/nordic/nrf54h20_cpuppr.dtsi
@@ -27,6 +27,10 @@ cpuppr_vevif: &cpuppr_vevif_local {};
 	};
 };
 
+&cpuppr_clic {
+	status = "okay";
+};
+
 &cpusec_bellboard {
 	compatible = "nordic,nrf-bellboard-remote";
 };
